force-app/main/default/objects/Opportunity/fields/ESACHS_AdministracionDelSeguroLey__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_AdministracionDelSeguroLey__c</fullName>
    <label>Administración del Seguro Ley</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACHS</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
            </value>
            <value>
                <fullName>ISL</fullName>
            </value>
            <value>
                <fullName>IST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>