force-app/main/default/objects/Opportunity/fields/ESACHS_AporteACHS__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_AporteACHS__c</fullName>
    <label>% Aporte ACHS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aporte parcial</fullName>
            </value>
            <value>
                <fullName>Aporte total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>