force-app/main/default/objects/Opportunity/fields/ESACHS_AprobacionRequerida__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_AprobacionRequerida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo tiene que ser true para poder pasar de estatus &quot;Validación Propuesta&quot; a &quot;Propuesta Validada&quot;</description>
    <label>Aprobación Requerida</label>
    <type>Checkbox</type>
</CustomField>