force-app/main/default/objects/Opportunity/fields/ESACHS_CebeSAP__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_CebeSAP__c</fullName>
    <label>Cebe SAP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>