force-app/main/default/objects/Opportunity/fields/ESACHS_CecoSAP__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_CecoSAP__c</fullName>
    <label>Ceco SAP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>