force-app/main/default/objects/Opportunity/fields/ESACHS_CreatedFromLead__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_CreatedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para identificar aquellas oportunidades que son creadas vía conversión de Lead.</description>
    <label>Created From Lead</label>
    <type>Checkbox</type>
</CustomField>