force-app/main/default/objects/Opportunity/fields/ESACHS_DuracionDelServicio__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_DuracionDelServicio__c</fullName>
    <label>Duración del servicio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>