force-app/main/default/objects/Opportunity/fields/ESACHS_FechaFinalDelContrato__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_FechaFinalDelContrato__c</fullName>
    <label>Fecha final del contrato</label>
    <type>Date</type>
</CustomField>