force-app/main/default/objects/Opportunity/fields/ESACHS_FechaInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_FechaInicioContrato__c</fullName>
    <label>Fecha de inicio contrato</label>
    <type>Date</type>
</CustomField>