force-app/main/default/objects/Opportunity/fields/ESACHS_MonedaDelContrato__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_MonedaDelContrato__c</fullName>
    <label>Moneda del contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>UF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>