force-app/main/default/objects/Opportunity/fields/ESACHS_MontoAporteACHS__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_MontoAporteACHS__c</fullName>
    <label>Monto aporte ACHS</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>