force-app/main/default/objects/Opportunity/fields/ESACHS_MontoAporteTerceros__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_MontoAporteTerceros__c</fullName>
    <label>Monto aporte terceros</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>