force-app/main/default/objects/Opportunity/fields/ESACHS_MotivoDePerdida__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_MotivoDePerdida__c</fullName>
    <label>Motivo de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No gestionado</fullName>
            </value>
            <value>
                <fullName>Falta de interés por el cliente</fullName>
            </value>
            <value>
                <fullName>Falta de información del cliente</fullName>
            </value>
            <value>
                <fullName>Demora en la respuesta por parte del cliente</fullName>
            </value>
            <value>
                <fullName>Negocio no factible</fullName>
            </value>
            <value>
                <fullName>Negocio no interesante para ESACHS</fullName>
            </value>
            <value>
                <fullName>Demora en la respuesta por parte de ESACHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>