force-app/main/default/objects/Opportunity/fields/ESACHS_MotivoDeSolicitud__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_MotivoDeSolicitud__c</fullName>
    <label>Motivo de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captación</fullName>
            </value>
            <value>
                <fullName>Retención</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>