force-app/main/default/objects/Opportunity/fields/ESACHS_NombreDelContactoACHS__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_NombreDelContactoACHS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del contacto ACHS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>