force-app/main/default/objects/Opportunity/fields/ESACHS_OrigenDeLaSolicitud__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_OrigenDeLaSolicitud__c</fullName>
    <label>Origen de la solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Página web</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Administrador de Contrato</fullName>
            </value>
            <value>
                <fullName>Procesos de licitación</fullName>
            </value>
            <value>
                <fullName>Directo con Gerencia Comercial</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>