force-app/main/default/objects/Opportunity/fields/ESACHS_PropuestaComercialRechazada__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_PropuestaComercialRechazada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca cuando se rechaza el proceso de aprobación de Validación de la Propuesta Final</description>
    <label>Propuesta Comercial Rechazada</label>
    <type>Checkbox</type>
</CustomField>