force-app/main/default/objects/Opportunity/fields/ESACHS_TipoDeServicio__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_TipoDeServicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro de Salud</fullName>
            </value>
            <value>
                <fullName>VSC Largo</fullName>
            </value>
            <value>
                <fullName>VSC Corto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>