force-app/main/default/objects/Opportunity/fields/ESACHS_ValidacionOperaciones__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_ValidacionOperaciones__c</fullName>
    <label>Validación Operaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>