force-app/main/default/objects/Opportunity/fields/ESACHS_ValidadorPrevencion__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_ValidadorPrevencion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador Prevención</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>ESACHS_JefeDdePrevencion</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>