force-app/main/default/objects/Opportunity/recordTypes/ESACHS_Ventas.recordType-meta.xml
<RecordType>
    <fullName>ESACHS_Ventas</fullName>
    <active>true</active>
    <businessProcess>ESACHS_Ventas</businessProcess>
    <description>RT para gestionar el proceso de ventas VSC o Centro de Salud</description>
    <label>Ventas ESACHS</label>
</RecordType>