force-app/main/default/objects/Opportunity/listViews/ESACHS_PropuestaValidada.listView-meta.xml
<ListView>
    <fullName>ESACHS_PropuestaValidada</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>RUT_de_Empresa__c</columns>
    <columns>ESACHS_AdministracionDelSeguroLey__c</columns>
    <columns>ESACHS_SolicitudACHS__c</columns>
    <columns>ESACHS_AporteACHS__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.ESACHS_Ventas</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Validación de la Propuesta</value>
    </filters>
    <label>ESACHS - Propuesta Validada</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ESACHS_GerenciaComercialYOperaciones</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>